<resources>
    <string name="app_name">versaoum</string>
    <string name="profile">Profile</string>
    <string name="notifications">Notifications</string>
    <string name="collection">Collection</string>
    <string name="inbox">Inbox</string>
    <string name="orders">Orders</string>
    <string name="others">Others</string>
    <string name="settings">Settings</string>
    <string name="support">Support</string>
    <string name="about_us">About Us</string>
    <string name="frank">Frank</string>
    <string name="verified">Verified</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="feed">Feed</string>
    <string name="sair">Sair</string>
    <string name="principal">Principal</string>
    <string name="configura_es">Configurações</string>
    <string name="ajuda">Ajuda</string>
    <string name="perfil">Perfil</string>
    <string name="chat">Chat</string>
    <string name="versaoum">versaoum</string>
    <string name="drawer_open" />
    <string name="drawer_close" />
    <string name="title_activity_home">HomeActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>

    <string name="home_second">Home Second</string>
    <string name="anuncios">Anuncios</string>

    <string-array name="list">
        <item>Distância</item>
        <item>Recompensa</item>
        <item>Data</item>
    </string-array>
    <string name="title_activity_maps">Map</string>
    <string name="add_menu">add_menu</string>

</resources>
